--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
     <div id="share-copy">Copy link</div>
   </div>
   <div id="popup">
-    <div class="header-text">Welcome to Mapus!</div>
+    <div class="header-text">Welcome to Mapper by Ali Hasan!</div>
     <div class="subheader-text">To get started, click below to sign in with Google.</div>
     <div id="google-signin"><img src="assets/google-logo.svg"> Sign in with Google</div>
   </div>
   <div id="overlay"></div>
   <div id="more-menu">
     <div class="more-item" id="geojson">Export to GeoJSON</div>
-    <a href="https://github.com/alyssaxuu/mapus" target="_blank" class="more-item">GitHub repo</a>
+    <a href="https://github.com/alihasan-official.github.io" target="_blank" class="more-item">GitHub repo</a>
     <div class="more-item" id="logout">Log out</div>
   </div>
   <div id="sidebar">
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div class="section" id="attribution-section">
-      <div class="section-name">Made by Alyssa X</div>
+      <div class="section-name">Made by ig.alihasan</div>
       <div id="attribution">© <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors</div>
     </div>
   </div>
@@ -148,16 +148,18 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
   <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "DOMAIN.firebaseapp.com",
-      projectId: "PROJECT_ID",
-      databaseURL: "DB_URL.firebaseio.com",
-      storageBucket: "DOMAIN.appspot.com",
-      messagingSenderId: "ID",
-      appId: "APP_ID"
-    };
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyAF38FQpfhMrw6xo7A5EP_TmpenidRI5hw",
+  authDomain: "social-map-80cae.firebaseapp.com",
+  databaseURL: "https://social-map-80cae-default-rtdb.firebaseio.com",
+  projectId: "social-map-80cae",
+  storageBucket: "social-map-80cae.firebasestorage.app",
+  messagingSenderId: "787084142357",
+  appId: "1:787084142357:web:0c37f698cdb16d08f06b1c",
+  measurementId: "G-8YP6DGLDMG"
+};
+  
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
