--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <div id="overlay"></div>
   <div id="more-menu">
     <div class="more-item" id="geojson">Export to GeoJSON</div>
-    <a href="https://github.com/alihasan-official.github.io" target="_blank" class="more-item">GitHub repo</a>
+    <a href="https://github.com/alihasan-official" target="_blank" class="more-item">GitHub repo</a>
     <div class="more-item" id="logout">Log out</div>
   </div>
   <div id="sidebar">
@@ -171,3 +171,4 @@ const firebaseConfig = {
   <script src="main.js"></script>
 </body>
 </html>
+
