Add PNG+world file and KML export options to map

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,13 @@
   </div>
   <div id="overlay"></div>
   <div id="more-menu">
-    <div class="more-item" id="geojson">Export to GeoJSON</div>
-    <a href="https://github.com/alihasan-official.github.io" target="_blank" class="more-item">GitHub repo</a>
-    <div class="more-item" id="logout">Log out</div>
+  <div class="more-item" id="geojson">Export to GeoJSON</div>
+  <div class="more-item" id="export-png-world">Export PNG + World File</div>
+  <div class="more-item" id="export-kml">Export to KML</div>
+  <a href="https://github.com/alihasan-official" target="_blank" class="more-item">GitHub repo</a>
+  <div class="more-item" id="logout">Log out</div>
+  <!-- leaflet-image for PNG export -->
+  <script src="https://unpkg.com/leaflet-image/leaflet-image.js"></script>
   </div>
   <div id="sidebar">
     <div id="map-details" class="section">
